[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/actors/Stopper.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 26.1808

[node name="Stopper" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Player" type="Position2D" parent="."]
position = Vector2( -29.2601, 13.2142 )

[node name="NPC" type="Position2D" parent="."]
position = Vector2( 35.8672, 22.653 )

[connection signal="area_entered" from="." to="." method="_on_Stopper_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Stopper_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
